gccida/g0/recog_12
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:12998:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13005:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13006:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13009:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13018:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13019:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2g = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13022:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13041:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13042:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = (  struct rtx_def *)x3[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13045:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13046:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = ( rtx)x2l[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13093:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2m = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13106:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2u; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13107:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2v = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13110:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2v; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13119:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2s; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13120:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2t = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13123:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2t; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/insn-recog.c:13132:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2o; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_12/src/obj/insn-recog.o] Error 1
